<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radialgradientback"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".CheckUpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/answer_these_questions"
            android:textColorHint="#2B0101"
            android:textSize="20sp"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/_0"
            android:textSize="20sp"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="40dp"
        android:padding="8dp"
        android:text="@string/do_you_had_a_direct_contact_with_a_covid_positive_patient"
        android:textColor="#000000"
        android:textSize="20sp" />


    <Button
        android:id="@+id/choice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="#68686C"
        android:padding="8dp"
        android:text="@string/yes"
        android:textColor="#fff" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="#6C7377"
        android:padding="8dp"
        android:text="@string/no"
        android:textColor="#fff" />

    <Button
        android:id="@+id/nxt_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish" />

</LinearLayout>